# interact_box

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  interact_box_config.json.in
.github/workflows/: build.yml
cmake/: InteractBoxConfig.cmake.in
include/: general_definitions.hpp  http_status_codes.h  processes.hpp  resources.h  setup.hpp  utils.hpp
include/errors/: error_handler.hpp  errors.hpp
include/http/: http_request.hpp  http_response.hpp  http_route.hpp
include/server/: web_server.hpp
include/server/routes/: route_handler_auxiliaries.hpp  route_handlers.hpp
include/server/socket_backend/: socket_backend.hpp  socket_backend_linux.hpp  socket_backend_windows.hpp
include/threads/: threads.hpp  tray_thread.hpp
include/utils/: cmd_util.hpp  config_util.hpp  crash_util.hpp  file_util.hpp  logging_util.hpp  message_box_util.hpp  reboot_util.hpp  registry_util.hpp  resolution_util.hpp  shell_util.hpp  time_util.hpp
installer/: install.nsi.in  install.sh
sounds/default_pack/: map.json
src/: app.manifest  interact_box.desktop  main.cpp  resources.rc  version.rc.in
src/errors/: error_handler.cpp
src/server/: web_server.cpp
src/server/http/: http_request.cpp  http_response.cpp  http_route.cpp
src/server/routes/: route_handler_auxiliaries.cpp  route_handlers.cpp
src/server/socket_backend/: socket_backend_linux.cpp  socket_backend_windows.cpp
src/threads/: tray_thread.cpp
src/utils/: cmd_util.cpp  config_util.cpp  crash_util.cpp  file_util.cpp  logging_util.cpp  message_box_util.cpp  reboot_util.cpp  registry_util.cpp  resolution_util.cpp  shell_util.cpp  time_util.cpp
